--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "concurrently": "^4.0.1",
+    "draft-js": "^0.10.4",
+    "draft-js-export-html": "^1.2.0",
     "firebase": "^5.5.8",
     "moment": "^2.22.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-draft-wysiwyg": "^1.12.1",
     "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
