--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-draft-wysiwyg": "^1.12.1",
+    "react-firebase-file-uploader": "^2.4.2",
     "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
